Use a single converged ruleset for ipv4 and ipv6

--- a/src/config.yml.example
+++ b/src/config.yml.example
@@ -28,44 +28,35 @@
 #global:
 #  # You may override the default filter policies of "DROP"
 #  policy:
-#    ip:
-#      filter:
-#        INPUT: ACCEPT
-#        FORWARD: ACCEPT
-#        OUTPUT: ACCEPT
-#    ip6:
-#      filter:
-#        INPUT: ACCEPT
-#        FORWARD: ACCEPT
-#        OUTPUT: ACCEPT
+#    filter:
+#      INPUT: ACCEPT
+#      FORWARD: ACCEPT
+#      OUTPUT: ACCEPT
 #
 #  # Create additonal chains here
 #  helper_chains:
-#    ip:
-#      filter:
-#        LOG_REJECT:
-#          - '-j LOG --log-level warning --log-prefix "IPTABLES_REJECT: "'
-#          - -j REJECT
+#    filter:
+#      LOG_REJECT:
+#        - '-j LOG --log-level warning --log-prefix "IPTABLES_REJECT: "'
+#        - -j REJECT
 #
 #  rules:
 #    # In some very rare cases you may want to put some rules even before the default
 #    # rules. This is useful if you want to do some processing on packets that are
 #    # part of an established session.
 #    pre_default:
-#      ip:
-#       filter:
-#         FORWARD:
-#           - ...
+#      filter:
+#        FORWARD:
+#          - ...
 #
 #    # You can add rules that are processed before zone dispatching here.
 #    # These will be hit for all interfaces, although they are still processed after
 #    # the default rules.
 #    pre_zone:
-#      ip:
-#        raw:
-#          # Add TFTP conntrack helper (new behaviour as of kernel 4.7)
-#          PREROUTING:
-#            - -p udp -d ${pxe} --dport 69 -j CT --helper tftp
+#      raw:
+#        # Add TFTP conntrack helper (new behaviour as of kernel 4.7)
+#        PREROUTING:
+#          - -4 -p udp -d 10.0.0.200 --dport 69 -j CT --helper tftp
 
 #zones:
 #  dmz:
@@ -77,16 +68,12 @@
 #      - eth0
 #      - eth1
 #    rules:
-#      ip:
-#        filter:
-#          INPUT:
-#            - -p tcp --dport 22 -j ACCEPT
-#            - -p icmp --imcp-type echo-request -j ACCEPT
-#          OUTPUT:
-#            - -j ACCEPT
-#      ip6:
-#        filter:
-#          ...
+#      filter:
+#        INPUT:
+#          - -p tcp --dport 22 -j ACCEPT
+#          - -4 -p icmp --imcp-type echo-request -j ACCEPT
+#        OUTPUT:
+#          - -j ACCEPT
 
 
 #
@@ -101,25 +88,23 @@
 #    interfaces:
 #      - eth0
 #    rules:
-#      ip:
-#        filter:
-#          INPUT:
-#            - -j ACCEPT
-#          FORWARD:
-#            - -j ACCEPT
-#          OUTPUT:
-#            - -j ACCEPT
+#      filter:
+#        INPUT:
+#          - -j ACCEPT
+#        FORWARD:
+#          - -j ACCEPT
+#        OUTPUT:
+#          - -j ACCEPT
 #  WAN:
 #    interfaces:
 #      - eth1
 #    rules:
-#      ip:
-#        filter:
-#          OUTPUT:
-#            - -j ACCEPT
-#        nat:
-#          POSTROUTING:
-#            - -j MASQUERADE
+#      filter:
+#        OUTPUT:
+#          - -j ACCEPT
+#      nat:
+#        POSTROUTING:
+#          - -4 -j MASQUERADE
 
 
 # Example with zone to zone rules and port forwarding. Use %{zone_name} whenever
@@ -135,45 +120,44 @@
 #    interfaces:
 #      - eth0
 #    rules:
-#      ip:
-#        filter:
-#          INPUT:
-#            - -j ACCEPT
-#          FORWARD:
-#            - -j ACCEPT
-#          OUTPUT:
-#            - -j ACCEPT
+#      filter:
+#        INPUT:
+#          - -j ACCEPT
+#        FORWARD:
+#          - -j ACCEPT
+#        OUTPUT:
+#          - -j ACCEPT
 #  WAN:
 #    interfaces:
 #      - eth1
 #    rules:
-#      ip:
-#        filter:
-#          FORWARD:
-#            - -d ${web_server} -p tcp --dport 80 -j ACCEPT
-#          OUTPUT:
-#            - -j ACCEPT
-#        nat:
-#          PREROUTING:
-#            - -p tcp --dport 80 -j DNAT --to-destination ${web_server}
-#          POSTROUTING:
-#            - -j MASQUERADE
+#      filter:
+#        FORWARD:
+#          - -4 -d ${web_server} -p tcp --dport 80 -j ACCEPT
+#        OUTPUT:
+#          - -j ACCEPT
+#      nat:
+#        PREROUTING:
+#          - -4 -p tcp --dport 80 -j DNAT --to-destination ${web_server}
+#        POSTROUTING:
+#          - -4 -j MASQUERADE
 #  DMZ:
 #    interfaces:
 #      - eth2
 #    rules:
-#      ip:
-#        filter:
-#          INPUT:
-#            - -p icmp --imcp-type echo-request -j ACCEPT
-#            - -j CUSTOM_REJECT
-#          FORWARD:
-#            - -o %{WAN} -j ACCEPT
-#            - -j CUSTOM_REJECT
-#          OUTPUT:
-#            - -j ACCEPT
-#        nat:
-#          POSTROUTING:
-#            - -j MASQUERADE
+#      filter:
+#        INPUT:
+#          - -4 -p icmp --imcp-type echo-request -j ACCEPT
+#          - -6 -p icmpv6 --icmpv6-type echo-request -j ACCEPT
+#          - -6 -p icmpv6 --icmpv6-type neighbor-solicitation -j ACCEPT
+#          - -j CUSTOM_REJECT
+#        FORWARD:
+#          - -o %{WAN} -j ACCEPT
+#          - -j CUSTOM_REJECT
+#        OUTPUT:
+#          - -j ACCEPT
+#      nat:
+#        POSTROUTING:
+#          - -4 -j MASQUERADE
 
 # vim: ft=yaml
